--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/seungjae0202/blog#readme",
   "devDependencies": {
+    "@vuepress/plugin-google-analytics": "^1.8.2",
     "vuepress": "^1.8.2"
   }
 }
