--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "homepage": "https://github.com/seungjae0202/blog#readme",
   "devDependencies": {
-    "@vuepress/plugin-google-analytics": "^1.8.2",
-    "vuepress": "^1.8.2"
+    "@vuepress/plugin-google-analytics": "^2.0.0-beta.26",
+    "vuepress": "^2.0.0-beta.26"
   }
 }
