--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,11 +6,11 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@master
-      
+
     - name: Install and Build
       run: |
         npm install
-        npm run build
+        npm run docs:build
 
     - name: Deploy Build Files
       env:
